--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p id="missao"><em>Nossa missão é:<strong> "Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
     </div>
+    <div></div>
     <h2>beneficios</h2>
     <ul>
     <li class="itens">Atendimento aos clientes</li>
@@ -21,6 +22,7 @@
     <li class="itens">Localização</li>
     <li class="itens">Profissionais qualificados</li>
     </ul>
+    </div>
     </body>
     </html>
 
