--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <li class="itens">Localização</li>
     <li class="itens">Profissionais qualificados</li>
     </ul>
-    </div>
+    </div class="beneficios">
+    <img src="beneficios.jpg" class="imagembeneficios">
     </body>
     </html>
 
