--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
+        <h1 class="titulo-principal">Barbearia Alura</h1>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
